Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><div class="festive-banner"><span class="holiday-message">Dobrou chuť!</span></div><a id="top"></a><table ><nav id="lunchbar"><span class="update-info">Last update: 11.01.2025 13:43:08 | Praha: 1°C, Zataženo</span><ul><li><a href="#naLedarnach">NA LEDARNACH</a></li><li><a href="#Mates">MATES</a></li><li><a href="#Kuta">KUTA</a></li><li><a href="#liskaBistrouska">LIŠKA BISTROUŠKA</a></li><li><a href="#Rybarna">RYBARNA</a></li><li><a href="#uCejpu">U Čejpů</a></li><li><a href="#poctivaRestaurace">Poctivá restaurace</a></li><li><a href="#CSAntal">ČS Antal</a></li><li><a href="#zelenyPruhJidelna">Zelený pruh</a></li><li><a href="#youyouge">Čína(2)</a></li><li><a href="#antalStaska">Jídelna Antala Staška</a></li></ul></nav>
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><div class="festive-banner"><span class="holiday-message">Dobrou chuť!</span></div><a id="top"></a><table ><nav id="lunchbar"><span class="update-info">Last update: 12.01.2025 06:02:59 | Praha: -1°C, Zataženo</span><ul><li><a href="#naLedarnach">NA LEDARNACH</a></li><li><a href="#Mates">MATES</a></li><li><a href="#Kuta">KUTA</a></li><li><a href="#liskaBistrouska">LIŠKA BISTROUŠKA</a></li><li><a href="#Rybarna">RYBARNA</a></li><li><a href="#uCejpu">U Čejpů</a></li><li><a href="#poctivaRestaurace">Poctivá restaurace</a></li><li><a href="#CSAntal">ČS Antal</a></li><li><a href="#zelenyPruhJidelna">Zelený pruh</a></li><li><a href="#youyouge">Čína(2)</a></li><li><a href="#antalStaska">Jídelna Antala Staška</a></li></ul></nav>
 <table>
 <section id="naLedarnach"></section><tr><th>NA LEDARNACH<br><a href="https://www.senkyrna.cz/senkyrna-na-ledarnach/denni-nabidka">https://www.senkyrna.cz/senkyrna-na-ledarnach/denni-nabidka</a></th></tr>
 <tr>
@@ -8,10 +8,10 @@
 <h5 class="border_box_title">Vážení hosté, dnes nepřijímáme platební karty, ale můžete zaplatit bezkontaktně přes Qerko. Děkujeme za pochopení</h5></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Polévky </h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar s nudlemi a zeleninou</td><td class="menuPrice">39,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Bramborová s houbami</td><td class="menuPrice">42,-</td></tr></tbody>
+<h5 class="border_box_title">Polévky </h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar s nudlemi a zeleninou</td><td class="menuPrice">39,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Čočková</td><td class="menuPrice">42,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Hlavní jídla</h5><tr><td class="menuWeight">TOP</td><td class="menuName">Kuřecí nudličky v sýrové omáčce se sušenými rajčaty, mačkané brambory s pórkem</td><td class="menuPrice">155,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Segedínský vepřový guláš, kynuté houskové knedlíky</td><td class="menuPrice">163,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Znojemská hovězí pečeně, dušená jasmínová rýže</td><td class="menuPrice">171,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Kroupové rizoto s houbami a smetanou, filírovaná vepřová panenka</td><td class="menuPrice">166,-</td></tr><tr><td class="menuWeight">1ks</td><td class="menuName">Kynutý koláč s naší banánovou marmeládou, tvarohem a meruňkou</td><td class="menuPrice">25,-</td></tr><tr><td class="menuWeight">Low carb</td><td class="menuName">Nízkosacharidová strava:150g Steak z kuřecích prsou balený v parmské šunce, hráškové a mrkvové pyré, volské oko</td><td class="menuPrice">189,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Plněné ovocné knedlíky (borůvkou, jahodou, meruňkou) s vanilkovým krémem,šlehačkou a karamelem</td><td class="menuPrice">155,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Těstoviny fusili "Arabiatta" s anglickou slaninou, česnekem promíchané v tomatové omáčce, strouhaný parmazán</td><td class="menuPrice">164,-</td></tr><tr><td class="menuWeight">300g</td><td class="menuName">Steak z vepřové kotlety bez kosti na kovbojských fazolích, hranolky</td><td class="menuPrice">219,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Staň se fanouškem našeho instagramu "senkyrna7" a sleduj naše slevové akce. </td><td class="menuPrice"></td></tr><tr><td class="menuWeight">Instagram</td><td class="menuName">Každý den od 15:00 do 19:00., můžeš využít insta slevu na tato jídla: 150g Smažený sýr za 139,- nebo 150g  Mix gril za 139,-  (pro nesledující za 184,-Kč) Musíš si pouze o tuto cenu říct a prokázat sledován našeho instagramu na telefonu </td><td class="menuPrice">139,-/184,-</td></tr><tr><td class="menuWeight">Instagram</td><td class="menuName">150g Smažený sýr 45% plněný šunkou, vařené brambory s máslem a šnitlíkem, tatarka</td><td class="menuPrice">139,-/184,-</td></tr><tr><td class="menuWeight">Instagram</td><td class="menuName">150g Mix gril z vepřové panenky, kuřecích prsou, vepřové pečeně a klobásky s cibulí, smažené plátky brambor, volské oko</td><td class="menuPrice">139,-/184,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Naše dezerty</td><td class="menuPrice"></td></tr><tr><td class="menuWeight"></td><td class="menuName">Tiramisu</td><td class="menuPrice">55,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Dnes na čepu</td><td class="menuPrice"></td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Oslav s námi 20-ti leté výročí spolupráce s pivovarem Staropramen bezkonkurenčními cenami plechovkových piv. Ceny od 12,90 do 15,90 jsou platné 9.12. - 29.12.2024</td><td class="menuPrice"></td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName"> Arnoštová hořká 10° alk. 4,3%  spodně kvašené - pivovar ,,Pardubice´´</td><td class="menuPrice">42,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName"> Tanková 11° ležák alk. 4,7%  spodně kvašené - pivovar Staropramen</td><td class="menuPrice">45,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Nové pivo od Staropramenu - Premiant extrachmel ležák, IBU 35, alk. 4,5% </td><td class="menuPrice">52,-</td></tr><tr><td class="menuWeight">0,4l</td><td class="menuName">Muflon 13° Red ALE alk. 5,4% - svrchně kvašené pivo</td><td class="menuPrice">59,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Šenkýrna střik (0,2l Zweigeltrebe rose / 0,3l sodovka s ledem)  </td><td class="menuPrice">72,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Houba (0,2l červené víno s 0,3l colou a ledem)</td><td class="menuPrice">72,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Citronáda</td><td class="menuPrice">27,- / 34,-</td></tr></tbody>
+<h5 class="border_box_title">Hlavní jídla</h5><tr><td class="menuWeight">TOP</td><td class="menuName">Smažené masové karbanátky, bramborová kaše s máslem, kyselá okurka</td><td class="menuPrice">155,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Hovězí svíčková na smetaně, kynuté houskové knedlíky, brusinky, šlehačka</td><td class="menuPrice">175,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Vepřové kostky na houbách, dušená jasmínová rýže</td><td class="menuPrice">162,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Hovězí kostky na česneku, bramborové knedlíky s cibulkou, dušený špenát</td><td class="menuPrice">164,-</td></tr><tr><td class="menuWeight">Low carb</td><td class="menuName">Nízkosacharidová strava: 200g Špikované krutí prso s jarní zeleninou na másle, volské oko na šunce, zakysaná smetana</td><td class="menuPrice">189,-</td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Kuřecí játra na grilu s restovanou anglickou slaninou, smažené bramborové plátky, mexický dip</td><td class="menuPrice">155,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Těstoviny fusili promíchané ve smetanové omáčce s kuřecím masem a špenátem, strouhaný parmazán</td><td class="menuPrice">159,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Steak z kuřecích prsou na jemné pepřové omáčce, restované špecle</td><td class="menuPrice">167,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">Každý den od 15:00 do 19:00., můžeš využít insta slevu na tato jídla: 150g Smažený sýr za 139,- nebo 150g  Mix gril za 139,-  (pro nesledující za 184,-Kč) Musíš si pouze o tuto cenu říct a prokázat sledován našeho instagramu na telefonu </td><td class="menuPrice">139,-/184,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Smažený sýr 45% plněný šunkou, vařené brambory s máslem a šnitlíkem, tatarka</td><td class="menuPrice">139,-/184,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Mix gril z vepřové panenky, kuřecích prsou, vepřové pečeně a klobásky s cibulí, smažené plátky brambor, volské oko</td><td class="menuPrice">139,-/184,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Naše dezerty</td><td class="menuPrice"></td></tr><tr><td class="menuWeight"></td><td class="menuName">Tiramisu</td><td class="menuPrice">55,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Odnes si domů plechovková piva za super ceny. Staropramen 10° za 14,- Kč. Staropramen 11° za 16,- Kč a Staropramen 12° za 18,- Kč.  </td><td class="menuPrice"></td></tr><tr><td class="menuWeight">0,5</td><td class="menuName">Nové pivo od Staropramenu - Premiant extrachmel ležák, IBU 35, alk. 4,5% </td><td class="menuPrice">52,.</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName"> Tanková 11° ležák alk. 4,7%  spodně kvašené - pivovar Staropramen</td><td class="menuPrice">45,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName"> Arnoštová hořká 10° alk. 4,3%  spodně kvašené - pivovar ,,Pardubice´´</td><td class="menuPrice">42,-</td></tr><tr><td class="menuWeight">0,4l</td><td class="menuName">Muflon 13° Red ALE alk. 5,4% - svrchně kvašené pivo</td><td class="menuPrice">59,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Šenkýrna střik (0,2l Zweigeltrebe rose / 0,3l sodovka s ledem)  </td><td class="menuPrice">72,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Houba (0,2l červené víno s 0,3l colou a ledem)</td><td class="menuPrice">72,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">0,3L Citronáda 27,-      0,5L Citronáda 34,-</td><td class="menuPrice"></td></tr></tbody>
 </table><table class="table">
 <tbody>
 <h5 class="border_box_title">wi-fi heslo: www.senkyrna.cz</h5><tr><td class="menuWeight"></td><td class="menuName">Pokrmy obsahují alergeny. Informace o výskytu konkrétních alergenů v pokrmu žádejte u obsluhy</td><td class="menuPrice"></td></tr></tbody></table></table>
@@ -29,7 +29,13 @@
 <script>document.write("<script type='text/javascript' src='https://www.menubot.cz/app/users/mattes32598458756932458985/export/specialoffer1_a.js?v=" + Date.now() + "'><\/script>");</script></figure></div><div class="member-intro offset-top-bottom col-md-12 col-xs-12 col-sm-12" data-animation="fadeInRight fast" data-delay="0.2"><br/><a href="#" name="tyden" style="display: block;
   position: relative;
   top: -100px; 
-  visibility: hidden;"></a><br/><table class="dm"></table><br/></div></div>
+  visibility: hidden;"></a><br/><table class="dm"></table><br/><div class="member-intro offset-top-bottom col-md-12 col-xs-12 col-sm-12" data-animation="fadeInRight fast" data-delay="0.2" style="padding: 0px;"><!--<br><h2>Mattes restaurace</h2><center><p><strong><br>Plzeňský Prazdroj</strong> - tankové pivo<br>
+Volba Sládků<br>
+Kozel tmavý<br>
+Cider Kingswood<br>
+<br>
+Letní zahrada<br>
+Vytápěna zimní zahrada</p><center>--></div></div></div>
 </td>
 </tr>
 </table>
@@ -39,7 +45,7 @@
 <td>
 <div class="menicka">
 <div class="obedovycas"><span>Menu:</span> <em>11:00–13:30</em></div>
-<div class="nadpis">Sobota 11.1.2025 </div>
+<div class="nadpis">Neděle 12.1.2025 </div>
 <ul>
 <li class="polevka">Restaurace má tento den zavřeno.</li> </ul>
 </div>
@@ -52,7 +58,7 @@
 <td>
 <div class="menicka">
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
-<div class="nadpis">Sobota 11.1.2025 </div>
+<div class="nadpis">Neděle 12.1.2025 </div>
 <ul>
 <li class="polevka">Restaurace má tento den zavřeno.</li> </ul>
 </div>
@@ -75,91 +81,8 @@
 <div class="inner">
 <h4 class="headline">POLEDNÍ MENU</h4>
 <div class="bookmarks cond">
-<div class="item js-bookmark">
-<a class="link js-bookmark-switcher" href="#day_24118">Pátek 10. 01.</a>
 </div>
-</div>
-<table class="list js-bookmark-block" id="day_24118">
-<tr>
-<td class="volume"></td>
-<td class="name">
-<span class="title cond">Hovězí vývar</span>
-<span class="allergen">(A: 1, 3, 7, 9)</span>
-<p class="desc">s masem, zeleninou a nudlemi </p>
-</td>
-<td class="price cond">
-        49 Kč    </td>
-</tr>
-<tr>
-<td class="volume"></td>
-<td class="name">
-<span class="title cond">Gulášová polévka</span>
-<span class="allergen">(A: 1, 10, 12)</span>
-</td>
-<td class="price cond">
-        49 Kč    </td>
-</tr>
-<tr>
-<td class="volume">150g</td>
-<td class="name">
-<span class="title cond">Hovězí kostky na červeném víně</span>
-<span class="allergen">(A: 1, 7, 12)</span>
-<p class="desc">s bramborovou kaš</p>
-</td>
-<td class="price cond">
-        169 Kč    </td>
-</tr>
-<tr>
-<td class="volume">300g</td>
-<td class="name">
-<span class="title cond">Gnocchi s kuřecím masem </span>
-<span class="allergen">(A: 1, 3, 7, 12)</span>
-<p class="desc">a smetanovo-parmazánovou omáčkou</p>
-</td>
-<td class="price cond">
-        159 Kč    </td>
-</tr>
-<tr>
-<td class="volume">150g</td>
-<td class="name">
-<span class="title cond">Vepřové Kung Pao</span>
-<span class="allergen">(A: 1, 4, 5, 6)</span>
-<p class="desc">s rýží </p>
-</td>
-<td class="price cond">
-        159 Kč    </td>
-</tr>
-<tr>
-<td class="volume">300g</td>
-<td class="name">
-<span class="title cond">Tagliatelle s uzeným lososem,</span>
-<span class="allergen">(A: 1, 3, 4, 7)</span>
-<p class="desc">smetanou a parmazánem </p>
-</td>
-<td class="price cond">
-        159 Kč    </td>
-</tr>
-<tr>
-<td class="volume">150g</td>
-<td class="name">
-<span class="title cond">Burger s trhaným vepřovým masem,</span>
-<span class="allergen">(A: 1, 3, 7, 11, 12)</span>
-<p class="desc">karamelizovanou cibulkou, hranolky a coleslaw </p>
-</td>
-<td class="price cond">
-        189 Kč    </td>
-</tr>
-<tr>
-<td class="volume">150g</td>
-<td class="name">
-<span class="title cond">Filírovaný FLANK STEAK</span>
-<span class="allergen">(A: 1, 7, 12)</span>
-<p class="desc">s houbovým přelivem, hranolky</p>
-</td>
-<td class="price cond">
-        199 Kč    </td>
-</tr>
-</table>
+<p class="no-meals">Každý pracovní den je pro vás v naší Šalandě nachystáno polední menu. Ne vždy ho ale stačíme nahrát na web.</p>
 </div>
 </section>
 </td>
