Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><div class="festive-banner"><span class="holiday-message">Dobrou chuť!</span></div><a id="top"></a><table ><nav id="lunchbar"><span class="update-info">Last update: 17.01.2025 08:32:12 | Praha: 0°C, Neznámo</span><ul><li><a href="#naLedarnach">NA LEDARNACH</a></li><li><a href="#Mates">MATES</a></li><li><a href="#Kuta">KUTA</a></li><li><a href="#liskaBistrouska">LIŠKA BISTROUŠKA</a></li><li><a href="#Rybarna">RYBARNA</a></li><li><a href="#uCejpu">U Čejpů</a></li><li><a href="#poctivaRestaurace">Poctivá restaurace</a></li><li><a href="#CSAntal">ČS Antal</a></li><li><a href="#zelenyPruhJidelna">Zelený pruh</a></li><li><a href="#youyouge">Čína(2)</a></li><li><a href="#antalStaska">Jídelna Antala Staška</a></li></ul></nav>
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><div class="festive-banner"><span class="holiday-message">Dobrou chuť!</span></div><a id="top"></a><table ><nav id="lunchbar"><span class="update-info">Last update: 17.01.2025 09:03:50 | Praha: 0°C, Zataženo</span><ul><li><a href="#naLedarnach">NA LEDARNACH</a></li><li><a href="#Mates">MATES</a></li><li><a href="#Kuta">KUTA</a></li><li><a href="#liskaBistrouska">LIŠKA BISTROUŠKA</a></li><li><a href="#Rybarna">RYBARNA</a></li><li><a href="#uCejpu">U Čejpů</a></li><li><a href="#poctivaRestaurace">Poctivá restaurace</a></li><li><a href="#CSAntal">ČS Antal</a></li><li><a href="#zelenyPruhJidelna">Zelený pruh</a></li><li><a href="#youyouge">Čína(2)</a></li><li><a href="#antalStaska">Jídelna Antala Staška</a></li></ul></nav>
 <table>
 <section id="naLedarnach"></section><tr><th>NA LEDARNACH<br><a href="https://www.senkyrna.cz/senkyrna-na-ledarnach/denni-nabidka">https://www.senkyrna.cz/senkyrna-na-ledarnach/denni-nabidka</a></th></tr>
 <tr>
@@ -27,13 +27,7 @@
 <div class="member-intro offset-top-bottom col-md-6 col-xs-12 col-sm-12" data-animation="fadeInLeft fast" data-delay="0.2"><figure><script>document.write("<script type='text/javascript' src='https://www.menubot.cz/app/users/mattes32598458756932458985/export/dailymenu_a.js?v=" + Date.now() + "'><\/script>");</script><br/><br/><br/></figure></div><div class="member-intro offset-top-bottom col-md-12 col-xs-12 col-sm-12" data-animation="fadeInRight fast" data-delay="0.2"><br/><a href="#" name="tyden" style="display: block;
   position: relative;
   top: -100px; 
-  visibility: hidden;"></a><br/><table class="dm"></table><br/><div class="member-intro offset-top-bottom col-md-12 col-xs-12 col-sm-12" data-animation="fadeInRight fast" data-delay="0.2" style="padding: 0px;"><!--<br><h2>Mattes restaurace</h2><center><p><strong><br>Plzeňský Prazdroj</strong> - tankové pivo<br>
-Volba Sládků<br>
-Kozel tmavý<br>
-Cider Kingswood<br>
-<br>
-Letní zahrada<br>
-Vytápěna zimní zahrada</p><center>--></div></div></div>
+  visibility: hidden;"></a><br/><table class="dm"></table><br/></div></div>
 </td>
 </tr>
 </table>
@@ -116,7 +110,7 @@ Vytápěna zimní zahrada</p><center>--></div></div></div>
 <section id="Rybarna"></section><a href="#top">&#x1F51D;</a><tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny filet z cerstveho jihoceskeho kapra s krenovym jogurtovym dipem, pecene brambory, salatek 175</li><li>Yeoneojang – korejsky marinovany cerstvy norsky losos  s nakladanym zazvorem a cervenou cibulkou, jasminova ryze, salatek 205</li><li>Nam prik ong – pikantni thajske veprove s rajcaty, tamarindem, krevetovou pastou a chilli, thajska lepkava ryze, salatek 175</li><li>Smazene rizecky ze srnci kyty, bramborovy salat s cervenou repou, majonezou a krenem, citron {L} 205</li><li>Thajske kari s pecenou dyni, paprikami, varenym vejcem, arasidy a kokosovym mlekem, jasminova ryze 175</li></ol>
+<ol><li>Peceny filet z atlantickeho hejka s olivami a susenymi rajcaty, stredomorsky fusilli salat s rajcaty, brokolici, paprikami a zelenymi bylinkami {L} 175</li><li>Peceny cerstvy morsky vlk s olivami a susenymi rajcaty, stredomorsky fusilli salat s rajcaty, brokolici, paprikami a zelenymi bylinkami {L} 205</li><li>Burrito s trhanymi hovezim a pikantni mexickou salsou z cervenych fazoli a kukurice, smazena zeleninova ryze, salatek {L} 175</li><li>Burger s konfitovanou kachnou, dzemem z cervene cibule, majonezou s celozrnnou horcici a pekingskym zelim, pecene brambory, salatek {L} 210</li><li>Bramborove halusky se smetanovou houbovou omackou, salatek {L} 175</li></ol>
 </td>
 </tr>
 </table>
@@ -236,7 +230,7 @@ Vytápěna zimní zahrada</p><center>--></div></div></div>
 <section id="CSAntal"></section><a href="#top">&#x1F51D;</a><tr><th>ČS Antal<br><a href="https://www.prague-catering.cz/provozovny/kantyna-ceska-sporitelna-antal/Denni-menu-Antal/">https://www.prague-catering.cz/provozovny/kantyna-ceska-sporitelna-antal/Denni-menu-Antal/</a></th></tr>
 <tr>
 <td>
-<table class="dennimenu"><tr><td><h3>DENNÍ NABÍDKA KANTÝNA</h3></td><td> </td></tr><tr><td><h3>Polévka</h3></td><td> </td></tr><tr><td>Žampionový krém</td><td>32 Kč</td></tr><tr><td><h3>Hotová jídla</h3></td><td> </td></tr><tr><td>150g Kuřecí ragú na houbách, jasmínová rýže</td><td>155 Kč</td></tr><tr><td>300g Kari rýže s uzeným Tofu</td><td>115 Kč</td></tr><tr><td><h3>Salátový bar</h3></td><td> </td></tr><tr><td>Výběr z míchaných salátů, krájené jednodruhové sezónní zeleniny hotových salátů, doplněno o</td><td> </td></tr><tr><td>dresinky a kondimenty.</td><td> </td></tr></table>
+<table class="dennimenu"><tr><td><h3>DENNÍ NABÍDKA KANTÝNA</h3></td><td> </td></tr><tr><td><h3>Polévka</h3></td><td> </td></tr><tr><td>Žampionový krém</td><td>32 Kč</td></tr><tr><td><h3>Hotová jídla</h3></td><td> </td></tr><tr><td>150g Kuřecí ragú na zelenině, dušená rýže</td><td>155 Kč</td></tr><tr><td>300g Kari rýže s uzeným Tofu</td><td>115 Kč</td></tr><tr><td><h3>Salátový bar</h3></td><td> </td></tr><tr><td>Výběr z míchaných salátů, krájené jednodruhové sezónní zeleniny hotových salátů, doplněno o</td><td> </td></tr><tr><td>dresinky a kondimenty.</td><td> </td></tr></table>
 </td>
 </tr>
 </table>
